--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   
   <h1>Entornos de Desarrollo</h1>
-  <a href="Tema_1/Tema_1.html">Tema 1</a>
+  <a href="Tema1/Tema_1.html">Tema 1</a>
   
 </body>
 </html>
