--- a/Tema1/Tema_1.html
+++ b/Tema1/Tema_1.html
@@ -7,6 +7,143 @@
 <body>
 
   <h1>Tema 1</h1>
+	<p>Lenguajes de programación
+
+¿Qué diferencia existe entre los lenguajes declarativos y los imperativos?. Nombra al menos 2 de cada tipo.
+
+	Son un tipo de lenguajes interpretados, la diferencia entre ellos es que los declarativos indican el resultado sin mostrar los pasos para ello, y los imperativos muestran los pasos a seguir.
+
+¿Explica qué es compilar? ¿Explica qué es interpretar?
+
+	Compilar es transformar el código fuente de un programa a su equivalente en otro lenguaje de programación de más bajo nivel.
+
+Interpretar es ejecutar directamente las instrucciones escritas en un lenguaje de programación dado
+
+Ventajas de los lenguajes compilados.
+
+	La ejecución de los programas es muy eficiente
+
+Ventajas de los lenguajes interpretados.
+
+	El código fuente se interpreta directamente
+
+
+Nombra 2 lenguajes compilados y otros 2 interpretados.
+
+	Compilados: C, C++
+	Interpretados: PHP, Javascript
+
+¿Puede considerarse código objeto el bytecode generado en Java tras la compilación? Explica la respuesta.
+
+	Puede considerarse código objeto pero destinado a la máquina virtual de Java en lugar de código objeto nativo
+
+Pon un ejemplo de lenguaje de los siguientes tipos:
+Bajo nivel. Ensamblador
+Nivel medio. C
+Alto nivel. C++, Java
+
+
+¿Qué paradigma de programación siguen los siguientes lenguajes?
+
+C - Imperativos Estructurados
+C++ - Imperativos multiparadigma
+SQL - Declarativos Algebraicos
+Java - Imperativos Orientado a objetos
+Javascript - Imperativos multiparadigma
+Lisp - Declarativos Funcionales
+Prolog - Declarativos Lógicos
+
+Puedes consultar el siguiente enlace:
+
+https://es.wikipedia.org/wiki/Paradigma_de_programaci%C3%B3n
+
+Explica qué criterios pueden seguir a la hora de elegir un lenguaje de programación para el desarrollo software.
+
+-Campo de aplicación
+-Experiencia previa
+-Herramientas de desarrollo
+-Documentación disponible
+-Base de usuarios
+-Reusabilidad
+-Portabilidad
+-Imposición del cliente
+
+
+Ciclo de vida del sofware
+
+1. Define "Ciclo de vida del software".
+	
+	Es el conjunto de actividades o procesos que ocurren desde la necesidad de crear software hasta la explotación de este.
+
+2. Nombra las fases principales del desarrollo de software y explica brevemente que se hace en cada una de ellas.
+
+● ANÁLISIS: Determina y define claramente las necesidades del cliente y se especifica los requisitos que debe cumplir el software a desarrollar.
+● DISEÑO: Descompone y organiza el sistema en elementos componentes que pueden ser desarrollados por separado.
+● CODIFICACIÓN: Escribe el código fuente de cada componente.
+● PRUEBAS: El principal objetivo de las pruebas debe ser conseguir que el programa funcione incorrectamente y que se descubran defectos.
+● MANTENIMIENTO: Durante la explotación del sistema software es necesario realizar cambios ocasionales.
+
+3. Explica brevemente en qué consiste el modelo en cascada cuando hablamos de desarrollo de software.
+
+	Es un modelo bastante rigido el cual el resultado final de una fase es el comienzo de la siguiente, no pudiendo volver a la fase anterior, pasando desde el analisis
+	de el software, pasando por el diseño, la codificación y las pruebas, sin enseñar nada al cliente hasta la ultima fase, creando asi problemas de comunicacion
+	con los clientes
+
+4. Ventajas e inconvenientes del modelo en cascada.
+
+	Es muy rapido, ya que no volvemos a volver a hacer algo anterior, pero tampoco se enseña nada al cliente hasta que se termina, teniendo que repetir todo el proceso
+	si este no esta conforme
+
+5. ¿Qué se entiende por verificación? ¿Y por validación?
+
+	Verificación: Proceso de evaluación del sistema o componentes, que permite determinar si los productos de una determinada fase del desarrollo satisfacen las                     condiciones impuestas en el inicio de la etapa.
+	
+	Validación: Es una evaluación del sistema o de componentes, solo que es en el transcurso o al final del proceso del desarrollo, donde se determina si cumple con lo               especificado.
+
+6. Explica cómo funciona el modelo de desarrollo mediante creación de prototipos.
+    
+    Se crean prototipos de prueba para enseñarsela al usuario o al cliente, para refinar los requisitos del software a desarrollar, y se repiten las veces que sean necesario.
+    
+7. Qué cuatro principios rigen el desarrollo ágil expresados en el Manifiesto Ágil?
+
+	● Individuos e interacciones: sobre procesos y herramientas
+	● Software funcionando: sobre documentación extensiva
+	● Colaboración con el cliente: sobre negociación contractual
+	● Respuesta ante el cambio: sobre seguir un plan
+
+8. ¿Qué es una historia de usuario? Consulta el siguiente enlace:
+        https://es.wikipedia.org/wiki/Historias_de_usuario
+
+	Las historias de usuario son una forma rápida de administrar los requisitos de los usuarios sin tener que elaborar gran cantidad de documentos formales y sin requerir de mucho tiempo para administrarlos. Las historias de usuario permiten responder rápidamente a los requisitos cambiantes.
+	
+9. SCRUM. Explica como funciona Scrum. Consulta los siguientes enlaces:
+        https://proyectosagiles.org/que-es-scrum/
+        https://proyectosagiles.org/como-funciona-scrum/
+	
+	Es un proyecto que se ejecute en ciclos cortos de una duracion fija, cada ciclo tiene un resultado completo, una incrementacion de producto final que sea facil de entregar con el minimo esfuerzo para el cliente lo solicite. Primero se planea la itineracion, luego se ejecuta y se inspecciona y se coloca la adaptacion necesaria.
+
+10. SCRUM. Define los siguientes términos:
+        Product backlog: La lista priorizada de objetivos/requisitos representa la visión y expectativas del cliente respecto a los objetivos y entregas del producto o proyecto
+        Sprint backlog: Subconjunto de objetivos/requisitos del Product Backlog seleccionado para la iteración actual y su plan de tareas de desarrollo.
+
+11. SCRUM. En la terminología Scrum qué términos se utilizan como sinónimo de:
+        Jefe de proyecto: Scrum Master
+        Cliente: Product Owner
+        Equipo de desarrollo: Team Development
+
+12. SCRUM. Haz un resumen de los requisitos para poder utilizar Scrum. Consulta el siguiente enlace:
+        https://proyectosagiles.org/requisitos-de-scrum/
+	
+	● Cultura de empresa basada en trabajo en equipo, delegación, creatividad y mejora continua.
+	● Compromiso del cliente en la dirección de los resultados del proyecto, gestión del ROI y disponibilidad para poder colaborar.
+	● Compromiso de la Dirección de la organización para resolver problemas endémicos y realizar cambios organizativos, formando equipos autogestionados y multidisciplinares 	    y fomentando una cultura de gestión basada en la colaboración y en la facilitación llevada a cabo por líderes al servicio del equipo.
+	● Compromiso conjunto y colaboración de los miembros del equipo.
+	● Relación entre proveedor y cliente basada en ganar-ganar, colaboración y transparencia.
+	● Facilidad para realizar cambios en el proyecto.
+	● Tamaño de cada equipo entre 5 y 9 personas (con técnicas específicas de planificación y coordinación cuando varios equipos trabajan en el mismo proyecto).
+	● Equipo trabajando en un mismo espacio común para maximizar la comunicación.
+	● Dedicación del equipo a tiempo completo.
+	● Estabilidad de los miembros del equipo</p>
   
 </body>
 </html>
