--- a/Tema1/Tema_1.html
+++ b/Tema1/Tema_1.html
@@ -7,28 +7,27 @@
 <body>
 
   <h1>Tema 1</h1>
-	<p>Lenguajes de programación
-
-¿Qué diferencia existe entre los lenguajes declarativos y los imperativos?. Nombra al menos 2 de cada tipo.
+	<p>
+¿Qué diferencia existe entre los lenguajes declarativos y los imperativos?. Nombra al menos 2 de cada tipo.</br>
 
 	Son un tipo de lenguajes interpretados, la diferencia entre ellos es que los declarativos indican el resultado sin mostrar los pasos para ello, y los imperativos muestran los pasos a seguir.
-
-¿Explica qué es compilar? ¿Explica qué es interpretar?
+</br>
+¿Explica qué es compilar? ¿Explica qué es interpretar?</br>
 
 	Compilar es transformar el código fuente de un programa a su equivalente en otro lenguaje de programación de más bajo nivel.
-
+</br>
 Interpretar es ejecutar directamente las instrucciones escritas en un lenguaje de programación dado
-
-Ventajas de los lenguajes compilados.
+</br>
+Ventajas de los lenguajes compilados.</br>
 
 	La ejecución de los programas es muy eficiente
+</br>
+Ventajas de los lenguajes interpretados.</br>
 
-Ventajas de los lenguajes interpretados.
-
-	El código fuente se interpreta directamente
+	El código fuente se interpreta directamente</br>
 
 
-Nombra 2 lenguajes compilados y otros 2 interpretados.
+Nombra 2 lenguajes compilados y otros 2 interpretados.</br>
 
 	Compilados: C, C++
 	Interpretados: PHP, Javascript
