--- a/Tema1/Tema_1.html
+++ b/Tema1/Tema_1.html
@@ -8,42 +8,42 @@
 
   <h1>Tema 1</h1>
 	<p>
-¿Qué diferencia existe entre los lenguajes declarativos y los imperativos?. Nombra al menos 2 de cada tipo.</br></br>
+1. ¿Qué diferencia existe entre los lenguajes declarativos y los imperativos?. Nombra al menos 2 de cada tipo.</br></br>
 
 	Son un tipo de lenguajes interpretados, la diferencia entre ellos es que los declarativos indican el resultado sin mostrar los pasos para ello, y los imperativos muestran los pasos a seguir.
 </br></br>
-¿Explica qué es compilar? ¿Explica qué es interpretar?</br></br>
+2. ¿Explica qué es compilar? ¿Explica qué es interpretar?</br></br>
 
 	Compilar es transformar el código fuente de un programa a su equivalente en otro lenguaje de programación de más bajo nivel.
 </br></br>
-Interpretar es ejecutar directamente las instrucciones escritas en un lenguaje de programación dado
+3. Interpretar es ejecutar directamente las instrucciones escritas en un lenguaje de programación dado
 </br></br>
-Ventajas de los lenguajes compilados.</br>
+4. Ventajas de los lenguajes compilados.</br>
 
 	La ejecución de los programas es muy eficiente
 </br></br>
-Ventajas de los lenguajes interpretados.</br></br>
+5. Ventajas de los lenguajes interpretados.</br></br>
 
 	El código fuente se interpreta directamente</br></br>
 
 
-Nombra 2 lenguajes compilados y otros 2 interpretados.</br></br>
+6. Nombra 2 lenguajes compilados y otros 2 interpretados.</br></br>
 
 	Compilados: C, C++
 	Interpretados: PHP, Javascript
 </br></br>
-¿Puede considerarse código objeto el bytecode generado en Java tras la compilación? Explica la respuesta.</br></br>
+7. ¿Puede considerarse código objeto el bytecode generado en Java tras la compilación? Explica la respuesta.</br></br>
 
 	Puede considerarse código objeto pero destinado a la máquina virtual de Java en lugar de código objeto nativo
 </br></br>
-Pon un ejemplo de lenguaje de los siguientes tipos:</br></br>
+8. Pon un ejemplo de lenguaje de los siguientes tipos:</br></br>
 
 Bajo nivel. Ensamblador</br>
 Nivel medio. C</br>
 Alto nivel. C++, Java</br></br>
 
 
-¿Qué paradigma de programación siguen los siguientes lenguajes?</br></br>
+9. ¿Qué paradigma de programación siguen los siguientes lenguajes?</br></br>
 
 C - Imperativos Estructurados</br>
 C++ - Imperativos multiparadigma</br>
@@ -57,7 +57,7 @@ Puedes consultar el siguiente enlace:
 
 https://es.wikipedia.org/wiki/Paradigma_de_programaci%C3%B3n
 </br></br>
-Explica qué criterios pueden seguir a la hora de elegir un lenguaje de programación para el desarrollo software.</br></br>
+10. Explica qué criterios pueden seguir a la hora de elegir un lenguaje de programación para el desarrollo software.</br></br>
 
 -Campo de aplicación</br>
 -Experiencia previa</br>
@@ -109,30 +109,30 @@ Ciclo de vida del sofware</br></br>
 	● Individuos e interacciones: sobre procesos y herramientas</br>
 	● Software funcionando: sobre documentación extensiva</br>
 	● Colaboración con el cliente: sobre negociación contractual</br>
-	● Respuesta ante el cambio: sobre seguir un plan</br>
+	● Respuesta ante el cambio: sobre seguir un plan</br></br>
 
 8. ¿Qué es una historia de usuario? Consulta el siguiente enlace:</br></br>
-        https://es.wikipedia.org/wiki/Historias_de_usuario
+        https://es.wikipedia.org/wiki/Historias_de_usuario</br>
 
 	Las historias de usuario son una forma rápida de administrar los requisitos de los usuarios sin tener que elaborar gran cantidad de documentos formales y sin requerir de mucho tiempo para administrarlos. Las historias de usuario permiten responder rápidamente a los requisitos cambiantes.</br></br>
 	
 9. SCRUM. Explica como funciona Scrum. Consulta los siguientes enlaces:</br></br>
-        https://proyectosagiles.org/que-es-scrum/
-        https://proyectosagiles.org/como-funciona-scrum/
+        https://proyectosagiles.org/que-es-scrum/</br>
+        https://proyectosagiles.org/como-funciona-scrum/</br>
 	
 	Es un proyecto que se ejecute en ciclos cortos de una duracion fija, cada ciclo tiene un resultado completo, una incrementacion de producto final que sea facil de entregar con el minimo esfuerzo para el cliente lo solicite. Primero se planea la itineracion, luego se ejecuta y se inspecciona y se coloca la adaptacion necesaria.</br></br>
 
 10. SCRUM. Define los siguientes términos:</br></br>
         Product backlog: La lista priorizada de objetivos/requisitos representa la visión y expectativas del cliente respecto a los objetivos y entregas del producto o proyecto</br>
-        Sprint backlog: Subconjunto de objetivos/requisitos del Product Backlog seleccionado para la iteración actual y su plan de tareas de desarrollo.</br>
+        Sprint backlog: Subconjunto de objetivos/requisitos del Product Backlog seleccionado para la iteración actual y su plan de tareas de desarrollo.</br></br>
 
 11. SCRUM. En la terminología Scrum qué términos se utilizan como sinónimo de:</br></br>
         Jefe de proyecto: Scrum Master</br>
         Cliente: Product Owner</br>
-        Equipo de desarrollo: Team Development</br>
+        Equipo de desarrollo: Team Development</br></br>
 
 12. SCRUM. Haz un resumen de los requisitos para poder utilizar Scrum. Consulta el siguiente enlace:</br></br>
-        https://proyectosagiles.org/requisitos-de-scrum/
+        https://proyectosagiles.org/requisitos-de-scrum/</br>
 	
 	● Cultura de empresa basada en trabajo en equipo, delegación, creatividad y mejora continua.</br>
 	● Compromiso del cliente en la dirección de los resultados del proyecto, gestión del ROI y disponibilidad para poder colaborar.</br>
