--- a/Tema1/Tema_1.html
+++ b/Tema1/Tema_1.html
@@ -144,6 +144,11 @@ Ciclo de vida del sofware</br></br>
 	● Equipo trabajando en un mismo espacio común para maximizar la comunicación.
 	● Dedicación del equipo a tiempo completo.
 	● Estabilidad de los miembros del equipo</p>
+
+</br></br></br>
+
+<h3>Modelo en Cascada</h3>
+<img src="Dibujo.jpg">
   
 </body>
 </html>
