--- a/Tema1/Tema_1.html
+++ b/Tema1/Tema_1.html
@@ -18,7 +18,7 @@
 </br></br>
 3. Interpretar es ejecutar directamente las instrucciones escritas en un lenguaje de programación dado
 </br></br>
-4. Ventajas de los lenguajes compilados.</br>
+4. Ventajas de los lenguajes compilados.</br></br>
 
 	La ejecución de los programas es muy eficiente
 </br></br>
@@ -54,7 +54,7 @@ Lisp - Declarativos Funcionales</br>
 Prolog - Declarativos Lógicos</br>
 
 Puedes consultar el siguiente enlace:
-
+</br>
 https://es.wikipedia.org/wiki/Paradigma_de_programaci%C3%B3n
 </br></br>
 10. Explica qué criterios pueden seguir a la hora de elegir un lenguaje de programación para el desarrollo software.</br></br>
@@ -98,7 +98,7 @@ Ciclo de vida del sofware</br></br>
 
 	Verificación: Proceso de evaluación del sistema o componentes, que permite determinar si los productos de una determinada fase del desarrollo satisfacen las condiciones impuestas en el inicio de la etapa.</br>
 	
-	Validación: Es una evaluación del sistema o de componentes, solo que es en el transcurso o al final del proceso del desarrollo, donde se determina si cumple con lo especificado.</br>
+	Validación: Es una evaluación del sistema o de componentes, solo que es en el transcurso o al final del proceso del desarrollo, donde se determina si cumple con lo especificado.</br></br>
 
 6. Explica cómo funciona el modelo de desarrollo mediante creación de prototipos.</br></br>
     
@@ -112,13 +112,13 @@ Ciclo de vida del sofware</br></br>
 	● Respuesta ante el cambio: sobre seguir un plan</br></br>
 
 8. ¿Qué es una historia de usuario? Consulta el siguiente enlace:</br></br>
-        https://es.wikipedia.org/wiki/Historias_de_usuario</br>
+        https://es.wikipedia.org/wiki/Historias_de_usuario</br></br>
 
 	Las historias de usuario son una forma rápida de administrar los requisitos de los usuarios sin tener que elaborar gran cantidad de documentos formales y sin requerir de mucho tiempo para administrarlos. Las historias de usuario permiten responder rápidamente a los requisitos cambiantes.</br></br>
 	
 9. SCRUM. Explica como funciona Scrum. Consulta los siguientes enlaces:</br></br>
         https://proyectosagiles.org/que-es-scrum/</br>
-        https://proyectosagiles.org/como-funciona-scrum/</br>
+        https://proyectosagiles.org/como-funciona-scrum/</br></br>
 	
 	Es un proyecto que se ejecute en ciclos cortos de una duracion fija, cada ciclo tiene un resultado completo, una incrementacion de producto final que sea facil de entregar con el minimo esfuerzo para el cliente lo solicite. Primero se planea la itineracion, luego se ejecuta y se inspecciona y se coloca la adaptacion necesaria.</br></br>
 
@@ -137,12 +137,12 @@ Ciclo de vida del sofware</br></br>
 	● Cultura de empresa basada en trabajo en equipo, delegación, creatividad y mejora continua.</br>
 	● Compromiso del cliente en la dirección de los resultados del proyecto, gestión del ROI y disponibilidad para poder colaborar.</br>
 	● Compromiso de la Dirección de la organización para resolver problemas endémicos y realizar cambios organizativos, formando equipos autogestionados y multidisciplinares y fomentando una cultura de gestión basada en la colaboración y en la facilitación llevada a cabo por líderes al servicio del equipo.</br>
-	● Compromiso conjunto y colaboración de los miembros del equipo.
-	● Relación entre proveedor y cliente basada en ganar-ganar, colaboración y transparencia.
-	● Facilidad para realizar cambios en el proyecto.
-	● Tamaño de cada equipo entre 5 y 9 personas (con técnicas específicas de planificación y coordinación cuando varios equipos trabajan en el mismo proyecto).
-	● Equipo trabajando en un mismo espacio común para maximizar la comunicación.
-	● Dedicación del equipo a tiempo completo.
+	● Compromiso conjunto y colaboración de los miembros del equipo.</br>
+	● Relación entre proveedor y cliente basada en ganar-ganar, colaboración y transparencia.</br>
+	● Facilidad para realizar cambios en el proyecto.</br>
+	● Tamaño de cada equipo entre 5 y 9 personas (con técnicas específicas de planificación y coordinación cuando varios equipos trabajan en el mismo proyecto).</br>
+	● Equipo trabajando en un mismo espacio común para maximizar la comunicación.</br>
+	● Dedicación del equipo a tiempo completo.</br>
 	● Estabilidad de los miembros del equipo</p>
 
 </br></br></br>
